--- a/templates/users/navbar.html
+++ b/templates/users/navbar.html
@@ -14,7 +14,7 @@
             <a class="nav-link" href="{{ url_for('events_file.explore_events') }}">Events</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="{{ url_for('events_file.about_us') }}">Contact Us</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/">Logout</a>
