--- a/static/admin/manage_events.css
+++ b/static/admin/manage_events.css
@@ -66,6 +66,17 @@ tbody td {
 }
 
 /* Button Styling */
+.but1{
+    background-color: #4CAF50; /* Green for edit */
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    opacity: 0.9;
+}
+
 .btn {
     text-decoration: none;
     padding: 8px 12px;
