--- a/templates/admin/edit_registration.html
+++ b/templates/admin/edit_registration.html
@@ -1,6 +1,7 @@
 {% extends "admin/admin_dashboard.html" %}
 
 {% block body %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='admin/edit_regist.css') }}">
     <h1>Edit Registration</h1>
     <form action="{{ url_for('admin.edit_registration', registration_id=registration.id) }}" method="POST">
         <div class="form-group">
@@ -28,7 +29,10 @@
             <textarea id="remarks" name="remarks" class="form-control">{{ registration.remarks }}</textarea>
         </div>
 
-        <button type="submit" class="btn btn-success">Update</button>
-        <a href="{{ url_for('events_file.view_registrations') }}" class="btn btn-secondary">Cancel</a>
+        <!-- Button Group for Update and Cancel -->
+        <div class="button-group">
+            <button type="submit" class="btn btn-success">Update</button>
+            <a href="{{ url_for('events_file.view_registrations') }}" class="btn btn-secondary">Cancel</a>
+        </div>
     </form>
 {% endblock %}
