--- a/templates/admin/edit_event.html
+++ b/templates/admin/edit_event.html
@@ -26,7 +26,7 @@
             <label for="photo">Photo</label>
             <input type="file" class="form-control" id="photo" name="photo">
         </div>
-        <button type="submit" class="btn btn-success">Update Event</button>
+        <button type="submit" class="but1 btn btn-success">Update Event</button>
     </form>
 </div>
 {% endblock content %}
