--- a/templates/users/events.html
+++ b/templates/users/events.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-
+    {% include 'users/navbar.html' %}
     <link rel="stylesheet" href="{{ url_for('static', filename='users/events.css') }}">
 
     <div class="event-container">
