--- a/static/styles.css
+++ b/static/styles.css
@@ -290,7 +290,7 @@ footer a {
 	max-width: 1200px;
 	margin: 0 auto;
 	display: flex;
-	justify-content: flex-end;
+	justify-content: center;
 	align-items: center;
 	box-shadow: none;
 }
