--- a/templates/users/navbar.html
+++ b/templates/users/navbar.html
@@ -14,13 +14,13 @@
             <a class="nav-link" href="{{ url_for('events_file.explore_events') }}">Events</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('events_file.about_us') }}">Contact Us</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/">Logout</a>
+            <a class="nav-link" href="{{ url_for('events_file.about_us') }}">About Us</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('admin.admin_login') }}">Admin</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/">Logout</a>
         </li>
     </ul>
 </div>
