--- a/static/users/caraousel.css
+++ b/static/users/caraousel.css
@@ -60,6 +60,17 @@ body, html {
     background-color: transparent;
 }
 
+button{
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+}
+
+button:hover{
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+}
 
 /* Details Section */
 .details-section {
