--- a/templates/users/navbar.html
+++ b/templates/users/navbar.html
@@ -8,7 +8,7 @@
     <!-- Navigation menu -->
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('dashboard') }}">Planify</a>
+            <a class="nav-link" aria-current="page" href="{{ url_for('dashboard') }}">Planify</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('events_file.explore_events') }}">Events</a>
